tests/paczka1/fuzzy1/17194950.err
Error in line 1: aZDB S527 2,89
Error in line 2: RQntlDRta A43 9,2
Error in line 5: XMguKrAaAv3 A43 77,9
Error in line 7: A9y0Be A43 46,9
Error in line 8: A43 S994 93,9
Error in line 13: RQntlDRta S527 13,6
Error in line 20: XMguKrAaAv3 S4 73,3
Error in line 35: A43 S527 41,8
